# well-leaderboard-eval

./: README.md  config.py  pyproject.toml  run_local.py
src/well_leaderboard_eval/: __init__.py  cli.py  config.py  evaluator.py  io.py  modal_app.py
tests/: test_smoke.py
